# calendai

./: README.md  pubspec.yaml
backend/: .gitignore  Cargo.toml  example.env
backend/.sqlx/: query-026b9c78a268169b775c908dd0b00804588f9f971bd7258519e6e677b86d5e97.json  query-155ba9b7d2b0f9fcf510da0d35df59e93adfa76c69804961231ad88f351a6f60.json  query-16497f22c8ce384147e9de63aaeaa78811c8b1c7023e29e5d88f081bd1a194e6.json  query-1b953a3c9e254bf537c6e3d28c50f88508b964f51be4b384a9fbb0ef93bfd80d.json  query-206d81d445fe663f8e1b51ca59f9be023114db2b2cc67ff0ef69831f66305f21.json  query-26133a550b25d7ab6e1bc51d1d26245c610c00f15037321715d06abbf857ef65.json  query-35dce31290b5aadb2dac19e5084286e73b7054a67a3c9f69faad46ed4ff95aae.json  query-36fd000da79c9b5510c38e6f1893c25bc2709acec6fd90ab9f7ea6c86446d29a.json  query-3eec0a7c512808852e28a2ee6c48a1560c400f06da811306a3a688a454d68230.json  query-41d3e299dea758493ac590f4f346b52ef438341088e0302c6a1ca76b94771124.json  query-41e1825d69075b765203922cbb3248658ef38a72d88d9e7c2fe8553a7406dffa.json  query-480edfe4b01d7444bc57912d9a86a65048d1342bcde2522ecfc1cf0b30f365a5.json  query-4b210b947244238041940b5a5d67706c6ac2f2567690c2441de69bfa662b4695.json  query-4b4330cdeebdc578b5c5bbda2ee259722c69c95822cbf4c3c1a2f65a21ba63b9.json  query-4d0588a939a18dab5df042c2e96b9613cd88a8d900e077a4eb7ba9f942411941.json  query-54040a4da16914ea88122534d60751c230993839738ca867954dd48d49214a48.json  query-56d922592686989e24896b1358689b01ec14a972bea8e37692466b74a78a8bf1.json  query-581e464d44adccbab9d448205248b199dceb64123b9c8d3fed831343d83a6bbc.json  query-59a924817451c6498a28f4da92c0f7a5bd24cd5995ac4098fcc7f73567949929.json  query-621d974e7f96aa6fa375b047682fbb12f6c4755029e2da4ab0a10004ae0cad84.json  query-6c4915319e35829d5511d76ba4dc6a6849a37676b8561b29e9b62dd359b3317a.json  query-6f0e5da47e33d882656e150f90b90ab8c08019474e57b5a3902ad7f9d5cef1ab.json  query-74d44c4a16a9c366ad0f71e7c423b967621b3bdcc60659755d021bbd1af4b920.json  query-7898b0657ec7eb3de7471cdc9f7169ff63522ae7e1d22f6b81b5c30444cf627b.json  query-7e222194d7a0e20350a0329d00a1ca68e8816028ded26b22962371f050c2b145.json  query-80d989c2f0cef29e1790178f559a9d7caa10f3b973e04c91c8fb346e566d071e.json  query-84baff87cdb92f3af7501452e5b42c697cb9a3d936f89abd5b70f7a188e31809.json  query-92db0a0bf6cd27bef8e939d59744595f25bb09f00547511aad8bf998242b65ee.json  query-94c383aff06d15f7e258e1af3bbe55a9114ea6283205b9eae9e7c3c62a0f7653.json  query-99f28e17e2da00a3aaa0100c64cc3a25a0135ac9e70ef18515ad9877ec28f552.json  query-a2a62888ce02b27a8fb8bdeb8d596494d05d8ca41413b7f1afddf4f40168ea6f.json  query-d6125fe23b912923e3becc14f3fdb52fad3b0f14471912b910db2652b7213867.json  query-ddc655eda430c72e2c7b296dbd31ccf8ef96ce721ce0637e007c8dd4f5b8e73b.json  (+7 more)
(+164 files in other folders)
