[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
