[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "uuid", "chrono", "macros" ] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
