[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.41", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
graph-rs-sdk = "3.0.1"
image = "0.25.6"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
rrule = { version = "0.14.0", features = ["serde"] }
schemars = { version = "1.0.4", features = ["uuid1", "chrono04"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "uuid", "chrono", "macros", "derive" ] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
